fix styling for dark mode and tweak drawing parameters

--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+svg {
+  filter: invert(100%);
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -77,5 +81,8 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+  svg {
+    filter: invert(0%);
   }
 }
